# pbi-embedded-demo

./: .gitignore  README.md  demo_users.json  main.py  pbi_embedded_overview.md  pbi_embedded_setup_considerations.md  pyproject.toml
.github/workflows/: pages.yml
app/: __init__.py  auth.py  utils.py  views.py
app/models/: __init__.py  embed_config.py  embed_token.py  embed_token_request_body.py  report_config.py
app/services/: aad_service.py  pbi_embed_service.py
app/static/css/: style.css
app/static/js/: embedding.js
app/templates/: about.html  base.html  home.html  login.html  reports.html
pbi/: Connected Providers Report.pbix  pbi_data_model.md
src/: main.py  pyproject.toml
src/app/: auth.py  config.py
src/app/services/: pbi_embed_service.py
src/app/static/css/: style.css
src/app/templates/: login.html  reports.html
webpage/: index.html  pbi_embedded_overview.html
